--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
     "nodemon": "^2.0.7"
   }
 }
